# clearnexus-chrome-extension

./: .gitignore  .travis.yml  LICENSE  README.md  bower.json  circle.yml  gulpfile.js  package.json
app/: main.js
client-gen/: README.md  client-gen.cabal  stack.yaml
client-gen/app/: Main.hs
client-gen/src/GenerateClient/: API.hs  Bridge.hs  Types.hs
extension/: manifest.json  notification.html  options.html  popup.html
src/: Config.js  Config.purs  Main.purs  ServerAPI.purs  Util.purs
src/Chrome/: Storage.js  Storage.purs
src/Client/: ServerAPI.purs
src/Client/GenerateClient/: Types.purs
src/DOM/: Listener.js  Listener.purs  QueryDocument.js  QueryDocument.purs  QueryEmail.js  QueryEmail.purs
src/Data/Time/Clock/: UTC.purs
src/GenerateClient/: API.purs  Types.purs
src/Net/: Types.purs
support/: Dev.purs  Prod.purs  Staging.purs
test/: GenClient.purs  Main.purs  PasteLink.purs  QueryEmail.purs  Storage.purs
