name:                client-gen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/client-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GenerateClient.API
                     , GenerateClient.Types
                     , GenerateClient.Bridge
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.0 && <= 4.15.1
                     , purescript-bridge > 0.9.0.0 && <= 0.10.1.0
                     , servant-purescript > 0.5.0.0 && <= 0.6.0.0
                     , servant-server > 0.9 && <= 0.9.1.1
                     , ip >= 0.8.6    && < 0.9
                     , text
                     , time
  default-language:    Haskell2010

executable client-gen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , client-gen
                     , purescript-bridge > 0.9.0.0 && <= 0.10.1.0
                     , servant-purescript > 0.5.0.0 && <= 0.6.0.0
                     , ip >= 0.8.6
                     , time
  default-language:    Haskell2010

test-suite client-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client-gen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/client-gen
